hg-tgi/overlays/llama2/patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hf-tgi-server
spec:
  template:
    spec:
      containers:
        - name: server
